--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,46 +4,56 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="310dp"
         android:id="@+id/user_image_header"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
         android:fitsSystemWindows="true"
         android:scaleType="fitXY"/>
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/user_image_header"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="10dp"
         android:text="User ID"
-        android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:textSize="25dp"
-        android:layout_below="@+id/user_image_header"/>
+        android:textSize="25sp"
+        android:textStyle="bold" />
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/username"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="3dp"
-        android:textSize="20dp"
-        android:layout_below="@+id/header"/>
-    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/header"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="3dp"
+        android:textSize="20sp" />
+    <TextView
         android:id="@+id/githublink"
-        android:layout_marginLeft="16dp"
-        android:text="Link to Github Profile"
-        android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:textSize="25dp"
-        android:layout_below="@+id/username"/>
-    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/username"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="10dp"
+        android:text="Link to Github Profile"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+    <TextView
         android:id="@+id/link"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/githublink"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="3dp"
-        android:textSize="20dp"
-        android:layout_below="@+id/githublink"/>
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/devButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/link"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:text="Contact Dev Haven Developer"
+        android:textAllCaps="false" />
 
 </RelativeLayout>
